--- a/prima.html
+++ b/prima.html
@@ -14,50 +14,43 @@
 </h1>
 
 Sono Andrea De Vivo e inizio a studiare l'html.
-
 <br>
-
 Chi ha inventato questo linguaggio?
-
 <br>
-
 Tim Berners-Lee
-
 <br>
-
 Quando è stato inventato?
-
 <br>
-
 1990
-
 <br>
-
 Quali sono gli scopi di questo linguaggio?
-
 <br>
-
 gestire i contenuti associandone o specificandone allo stesso tempo la struttura grafica all'interno della pagina web da realizzare grazie all'utilizzo di tag diversi.
 <br>
 Che cose il WEB?
-
 <br>
-
 il web è ilsistema che permette la condivisione di documenti ipertestuali multimediali, costituiti cioè da un insieme di contenuti testuali, visuali e audio/video, sfruttando l'infrastruttura di Internet.
 <br>
-
 Che problemi risolveva il WEB ?
-
 <br>
-
 Il web ha risolto l'accesso all'inforatica, la comunicazione, il commercio...
 <br>
 Che differenza tra web e html ed internet?
-
 <br>
-
 Internet è un'infrastruttura fisica e virtuale che collega diverse reti tra loro,Il Web, invece, è un servizio che sfrutta Internet per la condivisione di risorse mediante documenti ipertestuali e L'HTML è ancora il linguaggio ufficiale del World Wide utilizzato per creare documenti e definire la struttura
-
+<br>
+<img src = https://mail.google.com/mail/u/0?ui=2&ik=030c8b0042&attid=0.1&permmsgid=msg-a:r-4144637457264484648&th=19242432fd07f704&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_SnpBEWUFe9vaE_4BQ-FdxK5gFN5jp_uSYcm_9TAMP6iKMNRMtirJl92oyj6HcY2KEJuwMcnMsV5RoAdZ88iM2E3mksDxCpupTQn_au1S-Xy2geXAUtxKGrCI&disp=emb&realattid=ii_1924241cab2e4e5f341
+ <br>
+width= 200 e  height = 250
+<br>
+Andrea De Vivo
+<br>
+Ho 16 anni
+<br>
+Vado nell'istituto maxwell
+<br>
+Sono nato il 24 giugno 2008 a Moncalieri
+<br>
  </p>
 <body>
 </html>
