--- a/prima.html
+++ b/prima.html
@@ -39,7 +39,7 @@ Che differenza tra web e html ed internet?
 <br>
 Internet è un'infrastruttura fisica e virtuale che collega diverse reti tra loro,Il Web, invece, è un servizio che sfrutta Internet per la condivisione di risorse mediante documenti ipertestuali e L'HTML è ancora il linguaggio ufficiale del World Wide utilizzato per creare documenti e definire la struttura
 <br>
-< img src = https://mail.google.com/mail/u/0?ui=2&ik=030c8b0042&attid=0.1&permmsgid=msg-a:r-4144637457264484648&th=19242432fd07f704&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ_SnpBEWUFe9vaE_4BQ-FdxK5gFN5jp_uSYcm_9TAMP6iKMNRMtirJl92oyj6HcY2KEJuwMcnMsV5RoAdZ88iM2E3mksDxCpupTQn_au1S-Xy2geXAUtxKGrCI&disp=emb&realattid=ii_1924241cab2e4e5f341>
+<img src =  "C:\Users\andre\OneDrive\Desktop\unnamed.jpg"
 <br>
 width= 200 e  height = 250
 <br>
@@ -51,6 +51,14 @@ Vado nell'istituto maxwell
 <br>
 Sono nato il 24 giugno 2008 a Moncalieri
 <br>
+Io sono cresciuto a None un paese in provincia di Torino, una mia qualità distintiva dalle altre persone è che ascolto molto le persone quando si confidano con me e cerco sempre di aiutrli in qualunque momento., le mie passioni sono il (BASKET), l'uscire con gli amici e lo stare con la mia famiglia. 
+Per me il basket è importantissimo perchè e come se mi " salvasse " da tutti i problemi che ci sono al mondo, quando inizio a palleggiare mi sento la persona più libera e spensierata nel mondo, inoltre il tempo libero lo passo quasi tutto ad allenarmi con il mio migliore amico non che compagno di squadra. Poi mi piace anche passare 
+il tempo con la mia famiglia facendo giochi da tavala e guardando film .
+Ho imparato molte competenze ma le più importanti sono: le abilità informatiche che sto inparando grazie hai professori che cercano sempre di spiegare tutto con calma e aiutando lo studendte in caso ne abbia bisogno nonostante cio c'è sempre  molto da imparare ogni giorno, la leadership che la applico molto spesso a basket aiutando i miei compagni di squadra soprattutto quelli alle prime armi dandogli consigli sul come migliorare e aiutandoli quando sbagliano, un'altra capacità che sto aquisendo 
+è l'empatia verso le persone che si confidano con me.
+I miei più grandi obiettivi sono diventare un bravo programmatore e diventare una nuova promessa del basket. Dopo il diploma mi piacerebbe andare a lavorare per aziende di programmazione sia di videogiochi sia di appllicazioni. Io nella mia vita ho solo una frase che mi ispira in tutti i modi possibili ed è " VINCERE NON è IMPORTANTE è L'UNICA COSA CHE CONTA !! " per me questa frase dice tutto , quando sono in un momento di tensione o ansia me la ripeto sempre nella mente. Uso questa frase perchè mi motiva sempre a dare il 
+massimo in tutto e per tutto.
+Io mi descrivo semplicemente con questa immagine : <img src = "C:\Users\andre\OneDrive\Desktop\Progetto senza titolo.jpg"
  </p>
 <body>
 </html>
