--- a/prima.html
+++ b/prima.html
@@ -39,7 +39,7 @@ Che differenza tra web e html ed internet?
 <br>
 Internet è un'infrastruttura fisica e virtuale che collega diverse reti tra loro,Il Web, invece, è un servizio che sfrutta Internet per la condivisione di risorse mediante documenti ipertestuali e L'HTML è ancora il linguaggio ufficiale del World Wide utilizzato per creare documenti e definire la struttura
 <br>
-<img src =  "C:\Users\andre\OneDrive\Desktop\b9nyitac.png"
+<img src = "C:\Users\andre\OneDrive\Desktop\immage pagina html - Copia.jpg"
 <br>
 width= 10 e  height = 20
 <br>
