--- a/prima.html
+++ b/prima.html
@@ -51,7 +51,7 @@ Vado nell'istituto maxwell
 <br>
 Sono nato il 24 giugno 2008 a Moncalieri
 <br>
-Io sono cresciuto a None un paese in provincia di Torino, una mia qualità distintiva dalle altre persone è che ascolto molto le persone quando si confidano con me e cerco sempre di aiutrli in qualunque momento., le mie passioni sono il (BASKET), l'uscire con gli amici e lo stare con la mia famiglia. 
+Io sono cresciuto a None un paese in provincia di Torino, una mia qualità distintiva dalle altre persone è che ascolto molto le persone quando si confidano con me , cerco sempre di aiutrli in qualunque momento., le mie passioni sono il (BASKET), uscire con gli amici e lo stare con la mia famiglia. 
 Per me il basket è importantissimo perchè e come se mi " salvasse " da tutti i problemi che ci sono al mondo, quando inizio a palleggiare mi sento la persona più libera e spensierata nel mondo, inoltre il tempo libero lo passo quasi tutto ad allenarmi con il mio migliore amico non che compagno di squadra. Poi mi piace anche passare 
 il tempo con la mia famiglia facendo giochi da tavala e guardando film .
 Ho imparato molte competenze ma le più importanti sono: le abilità informatiche che sto inparando grazie hai professori che cercano sempre di spiegare tutto con calma e aiutando lo studendte in caso ne abbia bisogno nonostante cio c'è sempre  molto da imparare ogni giorno, la leadership che la applico molto spesso a basket aiutando i miei compagni di squadra soprattutto quelli alle prime armi dandogli consigli sul come migliorare e aiutandoli quando sbagliano, un'altra capacità che sto aquisendo 
