--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@ body {
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Home</a>
   <a href="#news">News</a>
-  <a href="">Esercizi Html/css</a>
+  <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/esercizi%20svolti.html">Esercizi Html/css</a>
   <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/prima.html">scheda personale</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
