--- a/index.htm
+++ b/index.htm
@@ -63,15 +63,26 @@ body {
 </head>
 <body>
 
-<div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/esercizi%20svolti.html">Esercizi Html/css</a>
-  <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/prima.html">scheda personale</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
+ <div class="dropdown">
+  <a href="#home" class="active">casa</a>
+    <button class="dropbtn">esercizi
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/prima.html">la mia scheda personale </a>
+      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/scatole.html">esercizio scatole </a>
+      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/Pagina%20WEB%20DIV%20ANNIDATI%20.html">esercizio div  annidati </a>
+      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/Flip-card-css.htm">esercizio flip card</a>
+      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/main/padding%20e%20margin.html">altro esercizio scatole </a>
+    </div>
+
+
+  </div>
 </div>
+
+
+</div>
+
 
 <div style="padding-left:16px">
   <h2>Andrea De Vivo</h2>
