--- a/index.htm
+++ b/index.htm
@@ -62,6 +62,10 @@ body {
 </style>
 </head>
 <body>
+ 
+  <div class="topnav" id="myTopnav">
+ <a href="#home" class="active">Home</a>
+  
 
  <div class="dropdown">
   <a href="#home" class="active">casa</a>
