--- a/index.htm
+++ b/index.htm
@@ -68,11 +68,11 @@ body {
   
 
     <div class="dropdown-content">
-      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/prima.html">la mia scheda personale </a>
-      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/scatole.html">esercizio scatole </a>
-      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/Pagina%20WEB%20DIV%20ANNIDATI%20.html">esercizio div  annidati </a>
-      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/Flip-card-css.htm">esercizio flip card</a>
-      <a href="https://github.com/AndreaDevivo/ANDREA-DEVIVO-TPSIT/blob/padding%20e%20margin.html">altro esercizio scatole </a>
+      <a href="https://andreadevivo.github.io/ANDREA-DEVIVO-TPSIT/prima.html">la mia scheda personale </a>
+      <a href="https://andreadevivo.github.io/ANDREA-DEVIVO-TPSIT/scatole.html">esercizio scatole </a>
+      <a href="https://andreadevivo.github.io/ANDREA-DEVIVO-TPSIT/Pagina%20WEB%20DIV%20ANNIDATI%20.html">esercizio div  annidati </a>
+      <a href="https://andreadevivo.github.io/ANDREA-DEVIVO-TPSIT/Flip-card-css.htm">esercizio flip card</a>
+      <a href="https://andreadevivo.github.io/ANDREA-DEVIVO-TPSIT/padding%20e%20margin.html">altro esercizio scatole </a>
     </div>
 
 
