--- a/JS 1 .html
+++ b/JS 1 .html
@@ -10,16 +10,16 @@
         text-decoration: none;
         outline: none;
         color: #fff;
-        background-color: #04AA6D;
+        background-color: #ADD8E6;
         border: none;
         border-radius: 15px;
         box-shadow: 0 9px #999;
         }
 
-    #miobottone1:hover {background-color: #3e8e41}
+    #miobottone1:hover {background-color: #A020F0}
 
     #miobottone1:active {
-        background-color: #3e8e41;
+        background-color: #C9 M22 Y65 K2;
         box-shadow: 0 5px #666;
         transform: translateY(4px);
         }
