--- a/JS 2.html
+++ b/JS 2.html
@@ -32,7 +32,7 @@
 <p>JS2</p>
 <p> Javascript2: input, bottone e alert</p>
 <input type="text" name="" id="input">
-<button id="bottone" onclick="aprifinestra()">Click me!</button>
+<button id="bottone" onclick="aprifinestra()">Cliccami!</button>
 
 
 <script>
