--- a/JS 3.html
+++ b/JS 3.html
@@ -15,16 +15,16 @@
         text-decoration: none;
         outline: none;
         color: #fff;
-        background-color: #3e5a8e;
+        background-color: #add806;
         border: none;
         border-radius: 15px;
         box-shadow: 0 9px #999;
         }
 
-    #miobottone1:hover {background-color: #7797d3}
+    #miobottone1:hover {background-color: #a020f0}
 
     #miobottone1:active {
-        background-color: #3e5a8e;
+        background-color: #0efdc8;
         box-shadow: 0 5px #666;
         transform: translateY(4px);
         }
@@ -47,12 +47,11 @@
     </head>
     <body>
         <div id="testo1" class="PrimoBoxHeader">
-            "Meglio aggiungere vita ai giorni
-            che non giorni alla vita."
+           “Fino a oggi la maggior parte degli scienziati è stata troppo occupata nello sviluppo di nuove teorie che descrivono che cosa sia l'universo per porsi la domanda perché?”
             <p></p>
-            -Rita Levi Montalcini
+           Stephen Hawking
             <button id="miobottone1" onclick="nascondiTesto('testo1')">Nascondi
-                testo Rita Levi Montalcini</button>
+                testo  Stephen Hawking </button>
         </div>
 
         <div id="testo2" class="PrimoBoxHeader">
@@ -66,13 +65,11 @@
         </div>
 
         <div id="testo3" class="PrimoBoxHeader">
-            "Un esperto è un uomo che ha fatto
-            tutti gli errori che è possibile
-            compiere in un campo molto ristretto"
+           “Lo scienziato nel suo laboratorio non è solo un tecnico, è anche un bambino davanti a fenomeni della Natura che lo affascinano come un racconto di fate.”
             <p></p>
-            -Niels Bohr
+           Marie Curie
             <button id="miobottone1" onclick="nascondiTesto('testo3')">Nascondi
-                testo Niels Bohr</button>
+                testo Marie Curie</button>
         </div>
 
         <div id="testo4" class="PrimoBoxHeader">
@@ -85,12 +82,11 @@
         </div>
 
         <div id="testo5" class="PrimoBoxHeader">
-            "Le meravigle del passato sono
-            oggi delle manifestazioni consuete"
+            “Gli scienziati sognano di fare grandi cose. Gli ingegneri le realizzano.”
             <p></p>
-            -Nikola Tesla
+            James Michener
             <button id="miobottone1" onclick="nascondiTesto('testo5')">Nascondi
-                testo Nikola Tesla</button>
+                testo  James Michener</button>
         </div>
 
         <script>
