--- a/JS 1 .html
+++ b/JS 1 .html
@@ -26,7 +26,7 @@
     #miobottone2 {
         display: inline-block;
         border-radius: 4px;
-        background-color: #f4511e;
+        background-color: #FFFF00;
         border: none;
         color: #FFFFFF;
         text-align: center;
@@ -71,7 +71,7 @@
         text-decoration: none;
         outline: none;
         color: #fff;
-        background-color: #3e5a8e;
+        background-color: #0000FF;
         border: none;
         border-radius: 15px;
         box-shadow: 0 9px #999;
