--- a/JS 1 .html
+++ b/JS 1 .html
@@ -25,7 +25,8 @@
         }
     #miobottone2 {
         display: inline-block;
-        border-radius: 4px;
+         padding: 15px 25px;
+        font-size: 24px;
         background-color: #FFFF00;
         border: none;
         color: #FFFFFF;
