--- a/JS 4.html
+++ b/JS 4.html
@@ -23,7 +23,7 @@
             text-decoration: none;
             outline: none;
             color: #fff;
-            background-color: #2d6ada;
+            background-color: #0efdc8;
             border: none;
             border-radius: 15px;
             box-shadow: 0 9px #696666;
@@ -76,13 +76,13 @@
 <body>
     <div>
         <p></p>
-        <label for="partenza" style="font-weight: bold">Punto di Partenza : </label>
+        <label for="partenza" style="font-weight: bold">Punto di inizio: </label>
         <input type="text" name="" id="Partenza">
 
         <label for="pausa" style="font-weight: bold">Punto di Pausa : </label>
         <input type="text" name="" id="Pausa">
 
-        <label for="arrivo" style="font-weight: bold">Punto d'arrivo : </label>
+        <label for="arrivo" style="font-weight: bold">Punto di fine : </label>
         <input type="text" name="" id="arrivo">
     </div>
 
