--- a/JS 4.html
+++ b/JS 4.html
@@ -5,7 +5,7 @@
     <style>
         Body {
             font-family: sans-serif;
-            background-color: #a1abe39c;
+            background-color: #add806;
         }
 
         Div {
@@ -34,7 +34,7 @@
         }
 
         #bottone:active {
-            background-color: #2b529b;
+            background-color: #0efdc8;
             box-shadow: 0 5px #767676;
             transform: translateY(4px);
         }
