--- a/JS 4.html
+++ b/JS 4.html
@@ -5,7 +5,7 @@
     <style>
         Body {
             font-family: sans-serif;
-            background-color: #a1abe39c;
+            background-color: #add806;
         }
 
         Div {
@@ -23,14 +23,14 @@
             text-decoration: none;
             outline: none;
             color: #fff;
-            background-color: #2d6ada;
+            background-color: #a020f0;
             border: none;
             border-radius: 15px;
-            box-shadow: 0 9px #696666;
+            box-shadow: 0 9px #0efdc8;
         }
 
         #bottone:hover {
-            background-color: #708ec5
+            background-color: #b1bbf3
         }
 
         #bottone:active {
