--- a/js5 set interval.html
+++ b/js5 set interval.html
@@ -16,11 +16,16 @@
             margin: 0;
             flex-direction: column;
             text-align: center;
+            position: relative;
         }
         h1 {
             color: #09ff00;
             font-size: 2.5em;
-            margin-bottom: 20px;
+            margin-top: 50px; /* Spostato verso l'alto */
+            position: absolute;
+            top: 30px; /* Posizionato al centro in alto */
+            left: 50%;
+            transform: translateX(-50%);
         }
         p {
             font-size: 1.2em;
@@ -31,14 +36,14 @@
             font-weight: bold;
             color: #026568;
             margin-top: 20px;
-            transition: all 0.3s ease-in-out; /* Smooth transition */
+            transition: all 0.3s ease-in-out;
         }
         button {
             background-color: #0044cc;
             color: white;
-            padding: 15px 30px;
+            padding: 15px 40px; /* Più largo per un effetto ovale */
             border: none;
-            border-radius: 8px;
+            border-radius: 30px; /* Ovale */
             cursor: pointer;
             font-size: 1.2em;
             margin-top: 30px;
@@ -56,13 +61,9 @@
 </head>
 <body>
     <h1>Lezione sul setInterval</h1>
-     <p> Il setInterval è un comando per
-        creare un temporizzatore cioè una chiamata ad una
-        funzione ogni n millisecondi
-    </p>
-
+    <p>Il setInterval è un comando per creare un temporizzatore, cioè una chiamata ad una funzione ogni n millisecondi.</p>
     <p>Ogni secondo il numero aumenta!</p>
-    
+   
     <button onclick="startCounter()">Avvia Contatore</button>
 
     <div>
