Update js5 set interval.html

--- a/js5 set interval.html
+++ b/js5 set interval.html
@@ -21,19 +21,21 @@
         h1 {
             color: #09ff00;
             font-size: 2.5em;
-            margin-top: 50px; /* Spostato verso l'alto */
+            margin-top: 50px;
             position: absolute;
-            top: 30px; /* Posizionato al centro in alto */
+            top: 30px;
             left: 50%;
             transform: translateX(-50%);
         }
         p {
-            font-size: 1.2em;
+            font-size: 1.6em; /* Aumentata la dimensione del font */
             margin-bottom: 30px;
+            font-weight: bold; /* Testo in grassetto */
+            color: white;
         }
         #out1 {
-            font-size: 3em;
-            font-weight: bold;
+            font-size: 4em; /* Aumentata la dimensione del contatore */
+            font-weight: bold; /* Testo in grassetto */
             color: #026568;
             margin-top: 20px;
             transition: all 0.3s ease-in-out;
@@ -41,11 +43,11 @@
         button {
             background-color: #0044cc;
             color: white;
-            padding: 15px 40px; /* Più largo per un effetto ovale */
+            padding: 15px 40px;
             border: none;
-            border-radius: 30px; /* Ovale */
+            border-radius: 30px;
             cursor: pointer;
-            font-size: 1.2em;
+            font-size: 1.5em; /* Aumentata la dimensione del font del bottone */
             margin-top: 30px;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s ease, background-color 0.2s ease;
