--- a/Verifica Simulazione.html
+++ b/Verifica Simulazione.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temporizzatore con Numero Casuale</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        #output {
-            margin-top: 20px;
-            font-size: 18px;
-        }
-    </style>
+   
 </head>
 <body>
 
