--- a/Fullstack_Sushi.html
+++ b/Fullstack_Sushi.html
@@ -48,7 +48,7 @@
                     <img src="C:\Users\andre\AppData\Local\Temp\548b344f-0c72-4f4c-b565-ad6f0184555c_images.zip.55c\images\dragon.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Dragon roll</h5> 
-                    <p class="card-text">tempura di gambero, avocado. OUT: avocado, crema di mayonese piccante, ikura, caviale di salmone.</p>
+                    <p class="card-text">tempura di gambero, avocado. fuori: avocado, crema di mayonese piccante, ikura, caviale di salmone.</p>
                     <a href="#" class="btn btn-primary">Acquista</a>
                     </div>
                 </div>
