--- a/Fullstack_Sushi.html
+++ b/Fullstack_Sushi.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-dark bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src= "C:\Users\andre\AppData\Local\Temp\49f8e289-bbd2-4ad6-8539-a5cd9695cf9b_images.zip.f9b\images\logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            <img src= "logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
             Fullstack Sushi
           </a>
         </div>
@@ -35,7 +35,7 @@
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="C:\Users\andre\AppData\Local\Temp\b86b99d9-3b11-429e-8ed6-a106c1d08f90_images.zip.f90\images\california.png" class="card-img-top" alt="...">
+                    <img src="california.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">California roll</h5>
                     <p class="card-text"> uramaki con un ripieno di cetriolo, avocado e polpa di granchio o surimi.</p>
@@ -45,7 +45,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="C:\Users\andre\AppData\Local\Temp\548b344f-0c72-4f4c-b565-ad6f0184555c_images.zip.55c\images\dragon.png" class="card-img-top" alt="...">
+                    <img src="dragon.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Dragon roll</h5> 
                     <p class="card-text">tempura di gambero, avocado. fuori: avocado, crema di mayonese piccante, ikura, caviale di salmone.</p>
@@ -55,7 +55,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="C:\Users\andre\AppData\Local\Temp\39bd7271-9346-431b-b3f5-63aaea4a6f1e_images.zip.f1e\images\dynamite.png" class="card-img-top" alt="...">
+                    <img src="dynamite.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Dynamite roll</h5> 
                     <p class="card-text">salmone e tonno con avocado con tripla salsa piccante.</p>
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="C:\Users\andre\AppData\Local\Temp\5bdf12ab-650d-4c73-9eea-53832ca5117e_images.zip.17e\images\philadelphia.png"  class="card-img-top" alt="...">
+                        <img src="philadelphia.png"  class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">philadelphia Roll</h5>
                         <p class="card-text"> Salmone, avocado, Philadelphia Kraft, caviale Tobiko.</p>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="C:\Users\andre\AppData\Local\Temp\3ae3864c-988b-45f9-b7bc-3490f4ff4785_images.zip.785\images\rainbow.png" class="card-img-top" alt="...">
+                        <img src="rainbow.png" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Rainbow Roll</h5> 
                         <p class="card-text">dentro: Salmone, tonno, avocado; fuori: salmone, tonno, pesce bianco, chips di cipolla, salsa barbeque.</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="C:\Users\andre\AppData\Local\Temp\99fe5838-4d3c-407d-9b88-ec124f2f1cf9_images.zip.cf9\images\shrimp.png" class="card-img-top" alt="...">
+                        <img src="shrimp.png" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Shrimp Roll</h5> 
                         <p class="card-text">vari tipi di pesce crudo tra cui salmone,tonno, granchio e diverse aggiunte tra cui tempura, mango, avocado, cetriolo, carote...</p>
