--- a/Flip-card-css.htm
+++ b/Flip-card-css.htm
@@ -57,7 +57,7 @@ body {
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="C:\Users\andre\OneDrive\Desktop\immage pagina html - Copia.jpg" alt="Andrea" style="width:300px;height:300px;">
+      <img src="<img src = <img src = "https://andreadevivo.github.io/ANDREA-DEVIVO-TPSIT/immagine%20%20pagina%20html.jpg"  width= 500 e  height = 500 />
     </div>
     <div class="flip-card-back">
       <h1>Ciao mi chiamo Andrea, abito a none un paese in provincia di torino e sono nato a moncalieri.
