Update Bootstrap 2 paginaweb.html

--- a/Bootstrap 2 paginaweb.html
+++ b/Bootstrap 2 paginaweb.html
@@ -1,106 +1,109 @@
+<!-- index.html - Homepage -->
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intelligenza artificiale e robotica  </title>
-    <!-- CDN di Bootstrap -->
+    <title>Intelligenza Artificiale e Robotica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>  
-
+</head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Intelligenza artificiale e robotica  </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="index.html">Intelligenza Artificiale e Robotica</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#robot">Cos'è un robot?</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#tipologie">Tipologie di robot</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#AI">Come funziona l'intelligenza artificiale?</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#differenze">Differenza tra robotica e intelligenza artificiale</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link active" href="home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="robot.html">Cos'è un robot?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tipologie.html">Tipologie di robot</a></li>
+                    <li class="nav-item"><a class="nav-link" href="ai.html">Come funziona l'AI?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="differenze.html">Differenza tra robotica e AI</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div class="container text-center mt-5">
+        <h1>Benvenuto nel mondo dell'Intelligenza Artificiale e della Robotica</h1>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
 
-   <div class="container">
-    <section id="robot" style="padding: 50px;">
-    <p class="lead">
-    COS'E' UN ROBOT? <br>
-    Un robot è una macchina programmabile in grado di svolgere un’azione prestabilita. <br>
-    Il termine robot deriva dalla parola ceca “robota”, il cui significato è “lavoro faticoso”. <br>
-    Nel 2005, il 90% dei robot veniva utilizzato nelle fabbriche automobilistiche ed erano principalmente costituiti da bracci meccanici incaricati di saldare e assemblare le varie parti di un’auto.<br>
-    La maggior parte dei robot industriali non è intelligente, poiché sono tenuti a svolgere attività semplici e ripetitive, prevedibili e <br>
-    pre-programmate.
-      <br>
-    -----------------------------------------------------------------------------------------------------------------------------------------------------
-    </p>
-  </section>
+<!-- robot.html -->
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cos'è un robot?</title>
+</head>
+<body>
+    <div class="container mt-5">
+        <h2>COS'E' UN ROBOT?</h2>
+        <p>Un robot è una macchina programmabile in grado di svolgere un’azione prestabilita.<br>
+        Il termine robot deriva dalla parola ceca “robota”, il cui significato è “lavoro faticoso”.<br>
+        Nel 2005, il 90% dei robot veniva utilizzato nelle fabbriche automobilistiche ed erano principalmente costituiti da bracci meccanici incaricati di saldare e assemblare le varie parti di un’auto.<br>
+        La maggior parte dei robot industriali non è intelligente, poiché sono tenuti a svolgere attività semplici e ripetitive, prevedibili e pre-programmate.</p>
+    </div>
+</body>
+</html>
 
+<!-- tipologie.html -->
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tipologie di robot</title>
+</head>
+<body>
+    <div class="container mt-5">
+        <h2>TIPOLOGIE DI ROBOT</h2>
+        <p>Esistono varie categorie di robot:<br>
+        1) Robot Pre-programmati: operano in un ambiente statico e controllato svolgendo compiti semplici e ripetitivi.<br>
+        2) Robot Umanoidi: assomigliano o imitano il comportamento umano, talvolta svolgendo attività ed espressioni che replicano quelle dell’uomo.<br>
+        3) Robot Autonomi: sono usualmente progettati per svolgere attività in ambienti che non richiedono la supervisione umana, usando sensori per percepire ciò che li circonda e quindi impiegando strutture decisionali per compiere l’azione successiva.<br>
+        4) Robot Teleoperativi: robot semi-autonomi che utilizzano una rete wireless per consentire il controllo umano da una distanza di sicurezza. Sono usualmente impiegati in condizioni geografiche o meteorologiche estreme.<br>
+        5) Robot Aumentati: sono i robot di potenziamento, noti anche come robot VR, i quali migliorano o sostituiscono le abilità che un essere umano potrebbe aver perso. Un esempio lo costituiscono gli arti protesici robotici.</p>
+    </div>
+</body>
+</html>
 
-  <section id="tipologie" style="padding: 50px;">
-    <p class="lead">
-    TIPOLOGIE DI ROBOT  <br>
-    Esistono varie categorie di robot:<br>
-    
-    1)Robot Pre-programmati: operano in un ambiente statico e controllato svolgendo compiti semplici e ripetitivi.<br>
+<!-- ai.html -->
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Come funziona l'AI?</title>
+</head>
+<body>
+    <div class="container mt-5">
+        <h2>COME FUNZIONA L'INTELLIGENZA ARTIFICIALE?</h2>
+        <p>L’Intelligenza Artificiale (AI) è una branca dell’informatica che permette la programmazione e la progettazione di sistemi, sia hardware che software,
+        che permettono di dotare le macchine di determinate caratteristiche che vengono considerate tipicamente umane, quali l'apprendimento, la percezione, il problem solving, la comprensione del linguaggio e il ragionamento logico.
+        Spesso l’AI implica un certo livello di apprendimento automatico, attraverso cui l’algoritmo viene “addestrato” a rispondere a determinati input.</p>
+    </div>
+</body>
+</html>
 
-    2)Robot Umanoidi: assomigliano o imitano il comportamento umano, talvolta svolgendo attività ed espressioni che replicano quelle dell’uomo.<br>
-
-    3)Robot Autonomi: sono usualmente progettati per svolgere attività in ambienti che non richiedono la supervisione umana, usando sensori per percepire ciò che li circonda e quindi impiegando strutture decisionali per compiere l’azione successiva.<br>
-
-    4)Robot Teleoperativi: robot semi-autonomi che utilizzano una rete wireless per consentire il controllo umano da una distanza di sicurezza. Sono usualmente impiegati in condizioni geografiche o meteorologiche estreme<br>
-
-    5)Robot Aumentati: sono i robot di potenziamento, noti anche come robot VR, i quali migliorano o sostituiscono le abilità che un essere umano potrebbe aver perso. Un esempio lo costituiscono gli arti protesici robotici.<br>
-    -----------------------------------------------------------------------------------------------------------------------------------------------------
-    </p>
-  </section>
-
-
-
-  <section id="AI" style="padding: 50px;">
-    <p class="lead">
-      COME FUNZIONA L'INTELLIGENZA ARTIFICIALE?  <br>
-      L’Intelligenza Artificiale (AI) è una branca dell’informatica che permette la programmazione e la progettazione di sistemi, sia hardware che software,
-      che permettono di dotare le macchine di determinate caratteristiche che vengono considerate tipicamente umane, quali l'apprendimento, la percezione, il problem solving, la comprensione del linguaggio e il ragionamento logico.
-      Spesso l’AI implica un certo livello di apprendimento automatico, attraverso cui l’algoritmo viene “addestrato” a rispondere a determinati input. <br>
-      -----------------------------------------------------------------------------------------------------------------------------------------------------
-    </p>
-  </section>
-
-
-
-
-    <section id="differenze" style="padding: 50px;">
-    <p class="lead">
-      DIFFERENZE TRA ROBOTICA E L'INTELLIGENZA ARTIFICIALE
-      Possiamo quindi concludere dicendo che Robotica e Intelligenza Artificiale sono due facce della stessa medaglia, due campi correlati ma completamente differenti. <br>
-      La Robotica prevede la creazione di robot per eseguire attività senza ulteriori interventi<br>
-      invece l'Intelligenza Artificiale è il modo in cui i sistemi emulano la mente umana per prendere decisioni e imparare.<br>
-      -----------------------------------------------------------------------------------------------------------------------------------------------------
-    </p>
-  </section>
-   </div>
-
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> 
-    <script src="js/bootstrap.min.js" ></script>
-  </body>
+<!-- differenze.html -->
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Differenza tra robotica e AI</title>
+</head>
+<body>
+    <div class="container mt-5">
+        <h2>DIFFERENZE TRA ROBOTICA E L'INTELLIGENZA ARTIFICIALE</h2>
+        <p>Possiamo quindi concludere dicendo che Robotica e Intelligenza Artificiale sono due facce della stessa medaglia, due campi correlati ma completamente differenti.<br>
+        La Robotica prevede la creazione di robot per eseguire attività senza ulteriori interventi,<br>
+        invece l'Intelligenza Artificiale è il modo in cui i sistemi emulano la mente umana per prendere decisioni e imparare.</p>
+    </div>
+</body>
 </html>
