--- a/Griglia 2×2.html
+++ b/Griglia 2×2.html
@@ -84,7 +84,7 @@
   function showSequence() {
     let index = 0;
     const status = document.getElementById('status');
-    status.textContent = Sequenza: ${sequence.map(index => colors[index]).join(', ')};
+    status.textContent = Memorizza la sequenza!;
 
     const interval = setInterval(() => {
       const tile = tileElements[sequence[index]];
