--- a/Griglia 2×2.html
+++ b/Griglia 2×2.html
@@ -46,99 +46,95 @@
 <div class="game-container">
   <h1>Memory Game</h1>
   <div class="grid" id="grid">
-    <!-- Tiles will be created here by JavaScript -->
+    <!-- I tiles verranno creati dinamicamente con JavaScript -->
   </div>
   <p id="status">Memorizza la sequenza!</p>
 </div>
 
 <script>
-  const colors = ['#ff6347', '#3b9a9c', '#ffd700', '#8a2be2'];
-  let sequence = [];
-  let userSequence = [];
-  let tileElements = [];
-  let step = 0;
+  const colors = ['#ff6347', '#3b9a9c', '#ffd700', '#8a2be2']; // Colori disponibili
+  let sequence = [];  // Sequenza dei colori da memorizzare
+  let userSequence = [];  // Sequenza dell'utente
+  let tileElements = [];  // Elementi dei tiles della griglia
+  let step = 0;  // Numero del turno
 
-  // Funzione per mescolare l'array
-  function shuffleArray(arr) {
-    for (let i = arr.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [arr[i], arr[j]] = [arr[j], arr[i]];
-    }
-  }
-
-  // Funzione per creare la griglia
+  // Crea la griglia di 2x2
   function createGrid() {
     const gridElement = document.getElementById('grid');
-    gridElement.innerHTML = '';  // Pulisce la griglia
+    gridElement.innerHTML = ''; // Pulisce la griglia esistente
     colors.forEach((color, index) => {
       const tile = document.createElement('div');
       tile.classList.add('tile');
-      tile.style.backgroundColor = color;
-      tile.addEventListener('click', () => handleTileClick(index));
-      gridElement.appendChild(tile);
-      tileElements.push(tile);
+      tile.style.backgroundColor = color; // Imposta il colore di ciascun quadrato
+      tile.dataset.index = index; // Aggiungi un attributo per identificare il quadrato
+      tile.addEventListener('click', () => handleTileClick(index)); // Aggiungi evento click
+      gridElement.appendChild(tile);  // Aggiungi il tile alla griglia
+      tileElements.push(tile);  // Aggiungi il tile all'array per riferimento
     });
   }
 
-  // Mostra la sequenza al giocatore
+  // Mostra la sequenza dei colori
   function showSequence() {
     let index = 0;
     const status = document.getElementById('status');
     status.textContent = Memorizza la sequenza!;
 
+    // Mostra i colori uno alla volta
     const interval = setInterval(() => {
-      const tile = tileElements[sequence[index]];
-      tile.classList.add('flipped');
-      setTimeout(() => tile.classList.remove('flipped'), 500);
+      const tile = tileElements[sequence[index]];  // Seleziona il tile corrispondente
+      tile.classList.add('flipped');  // Mostra il colore del tile
+      setTimeout(() => tile.classList.remove('flipped'), 500);  // Nascondi il colore dopo mezzo secondo
       index++;
 
       if (index === sequence.length) {
-        clearInterval(interval);
-        setTimeout(() => status.textContent = 'Ora tocca a te!', 500);
+        clearInterval(interval);  // Ferma l'intervallo quando la sequenza è finita
+        setTimeout(() => status.textContent = 'Ora tocca a te!', 500);  // Cambio del messaggio
       }
-    }, 1000);
+    }, 1000);  // Mostra ogni tile con intervallo di 1 secondo
   }
 
-  // Gestisce il click sul tile da parte del giocatore
+  // Gestisce il click sui tiles da parte dell'utente
   function handleTileClick(index) {
-    userSequence.push(index);
+    userSequence.push(index);  // Aggiungi il tile cliccato alla sequenza dell'utente
 
+    // Se la sequenza dell'utente è lunga quanto quella da memorizzare
     if (userSequence.length === sequence.length) {
-      checkSequence();
+      checkSequence();  // Verifica se la sequenza dell'utente è corretta
     }
   }
 
   // Verifica se la sequenza dell'utente è corretta
   function checkSequence() {
+    const status = document.getElementById('status');
     if (userSequence.join(',') === sequence.join(',')) {
-      document.getElementById('status').textContent = 'Bravo! Hai indovinato!';
-      setTimeout(nextRound, 1500);
+      status.textContent = 'Bravo! Hai indovinato!';
+      setTimeout(nextRound, 1500);  // Passa al turno successivo
     } else {
-      document.getElementById('status').textContent = 'Ops, prova ancora!';
-      setTimeout(resetGame, 1500);
+      status.textContent = 'Ops, prova ancora!';
+      setTimeout(resetGame, 1500);  // Reset del gioco in caso di errore
     }
   }
 
   // Passa al turno successivo
   function nextRound() {
-    sequence.push(Math.floor(Math.random() * colors.length));
-    userSequence = [];
+    sequence.push(Math.floor(Math.random() * colors.length));  // Aggiungi un nuovo colore alla sequenza
+    userSequence = [];  // Resetta la sequenza dell'utente
     step++;
-    showSequence();
+    showSequence();  // Mostra la nuova sequenza
   }
 
   // Reset del gioco
   function resetGame() {
-    sequence = [];
-    userSequence = [];
-    step = 0;
+    sequence = [];  // Pulisci la sequenza
+    userSequence = [];  // Pulisci la sequenza dell'utente
+    step = 0;  // Resetta il passo
     document.getElementById('status').textContent = 'Memorizza la sequenza!';
-    nextRound();
+    nextRound();  // Inizia una nuova partita
   }
 
   // Avvia il gioco
-  createGrid();
-  resetGame();
+  createGrid();  // Crea la griglia
+  resetGame();  // Inizia il gioco con una nuova sequenza
 </script>
 
 </body>
