--- a/Game Memory sequenza.html
+++ b/Game Memory sequenza.html
@@ -8,14 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .button {
-            width: 100px;
-            height: 100px;
-            margin: 10px;
+            width: 80px;
+            height: 80px;
+            margin: 5px;
             border-radius: 10px;
+            background-color: white;
             transition: all 0.3s ease;
         }
         .highlight {
-            background-color: #f39c12;
+            transition: all 0.3s ease;
         }
         .active {
             background-color: #27ae60;
@@ -23,7 +24,7 @@
         .grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            grid-gap: 20px;
+            grid-gap: 10px;
             justify-items: center;
             margin-top: 30px;
         }
@@ -53,6 +54,7 @@
     let userSequence = [];
     let score = 0;
     let isGameActive = false;
+    const colors = ["#f39c12", "#e74c3c", "#3498db", "#9b59b6", "#1abc9c", "#e67e22", "#16a085", "#2ecc71", "#d35400", "#f1c40f", "#7f8c8d", "#2980b9", "#8e44ad", "#34495e", "#27ae60", "#f39c12"];
 
     // Funzione per iniziare il gioco
     document.getElementById('start-btn').addEventListener('click', startGame);
@@ -82,9 +84,9 @@
         let i = 0;
         const interval = setInterval(() => {
             const button = document.getElementById(`button-${sequence[i]}`);
-            button.classList.add('highlight');
+            button.style.backgroundColor = colors[i % colors.length]; // Colori diversi per la sequenza
             setTimeout(() => {
-                button.classList.remove('highlight');
+                button.style.backgroundColor = 'white'; // Ripristina il colore
             }, 500);
             i++;
             if (i === sequence.length) {
