--- a/Game Memory sequenza.html
+++ b/Game Memory sequenza.html
@@ -7,6 +7,11 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            background-color: #2c3e50; /* Sfondo nero-grigio scuro */
+            color: white;
+        }
+
         .button {
             width: 80px;
             height: 80px;
